emmett/test/bad/aggrstr.emt
VMM1Hz ag[0] <- "bad";
